<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:src="@drawable/elecfreaks_about" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="20dp"
        android:background="@drawable/block_bg2"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="44dip"
            android:autoLink="web"
            android:paddingLeft="5dip"
            android:paddingTop="12dip"
            android:text="@string/about_us_weburl" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:background="#ffc8cfda" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="44dip"
            android:autoLink="email"
            android:paddingLeft="5dip"
            android:paddingTop="12dip"
            android:text="@string/about_us_email" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="44dip"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="50dp"
        android:text="@string/app_copyright" />

</LinearLayout>